# ai-novel-deconstruction

./: .env.example  .gitignore  README.md  启动AI小说拆解工作台.bat
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_m0_core.py  0002_task_attempts.py  0003_artifact_blobs.py  0004_source_ingest.py  0005_analysis_candidates.py  0006_source_parser_version.py  0007_narrative_synthesis.py  0008_deep_analysis.py  0009_analysis_issues.py  0010_task_attempt_diagnostics.py  0011_event_details.py  0012_analysis_digests.py
backend/app/: __init__.py  api.py  config.py  db.py  m0_gate_probe.py  main.py  models.py  repositories.py  schemas.py  worker.py
backend/app/providers/: __init__.py  base.py  fake.py  openai_responses.py  registry.py
backend/app/services/: analysis.py  artifacts.py  provider_config.py  source_import.py  tasks.py  workbench.py
backend/tests/: conftest.py  test_analysis_flow.py  test_claim_quality.py  test_context_budget.py  test_document_encoding.py  test_hierarchical_analysis.py  test_migrations.py  test_model_settings.py  test_revision_impact.py  test_settings.py  test_source_import.py  test_task_attempt_model.py  test_task_flow.py  test_workbench_identity.py
backend/tests/reliability/: conftest.py  test_artifact_identity_contract.py  test_artifact_recovery_contract.py  test_gap_manifest.py  test_lease_fencing_contract.py  test_provider_artifact_contract.py  test_provider_failure_contract.py  test_recovery_semantics_contract.py  test_retry_cancel_contract.py  test_task_claim_contract.py
docs/: ISSUE_BACKLOG.md  (+10 more)
(+39 files in other folders)
