[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-novel-deconstruction-backend"
version = "0.0.1"
description = "M0 backend scaffold for the AI Novel Deconstruction project"
requires-python = ">=3.12,<3.14"

[tool.setuptools.packages.find]
where = ["."]
