[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-novel-deconstruction-backend"
version = "0.0.1"
description = "Backend for the AI Novel Deconstruction Workbench"
requires-python = ">=3.12,<3.14"
dependencies = [
  "fastapi>=0.128,<1.0",
  "uvicorn[standard]>=0.48,<1.0",
  "pydantic>=2.13,<3.0",
  "pydantic-settings>=2.14,<3.0",
  "sqlalchemy>=2.0,<3.0",
  "alembic>=1.18,<2.0",
  "httpx>=0.28,<1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=9,<10",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
